<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="80dp"
    android:background="@drawable/bg_dark"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="24sp"
        android:layout_margin="32dp"
        android:textColor="@color/lighter"
        android:textStyle="bold"
        android:gravity="center"
        />

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/lighter"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/welcome"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/darkest"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enterName"
                    android:gravity="center"
                    android:textColor="@color/darker"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:textColor="@color/darkest"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    app:cornerRadius="8dp"
                    android:paddingVertical="16dp"
                    android:backgroundTint="@color/darkest"
                    android:textColor="@color/lighter"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



</LinearLayout>